--- a/brafe1/index.html
+++ b/brafe1/index.html
@@ -34,11 +34,11 @@
     <h2>Uma mistura de</h2>
     <div class="sobre-container">
       <div class="sobre-item">
-        <img src="/img/cafe-1.jpg" alt="Café1">
+        <img src="./img/cafe-1.jpg" alt="Café1">
         <h3>amor</h3>
       </div>
       <div class="sobre-item">
-        <img src="/img/cafe-2.jpg" alt="Café2">
+        <img src="./img/cafe-2.jpg" alt="Café2">
         <h3>perfeição</h3>
       </div>
     </div>
@@ -65,7 +65,7 @@
 
   <section class="locais">
     <div class="locais-item">
-      <img src="/img/botafogo.jpg" alt="Brafé - Botafogo">
+      <img src="./img/botafogo.jpg" alt="Brafé - Botafogo">
       <div>
         <h2>Botafogo</h2>
         <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
@@ -73,7 +73,7 @@
       </div>
     </div>
     <div class="locais-item">
-      <img src="/img/iguatemi.jpg" alt="Brafé - Iguatemi">
+      <img src="./img/iguatemi.jpg" alt="Brafé - Iguatemi">
       <div>
         <h2>Iguatemi</h2>
         <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
@@ -81,7 +81,7 @@
       </div>
     </div>
     <div class="locais-item">
-      <img src="/img/mineirao.jpg" alt="Brafé - Mineirão">
+      <img src="./img/mineirao.jpg" alt="Brafé - Mineirão">
       <div>
         <h2>Mineirão</h2>
         <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
@@ -90,10 +90,10 @@
     </div>
   </section>
 
-  <section>
-    <div>
-      <div>
-        <h2>Assine nossa Newsletter</h2>
+  <section class="assine">
+    <div class="assine-container">
+      <div class="assine-info">
+        <h2>Assine Nossa Newsletter</h2>
         <p>promoções e eventos mensais</p>
       </div>
       <form action="">
@@ -104,10 +104,10 @@
     </div>
   </section>
 
-  <footer>
-    <div>
-      <p>Este é um projeto de Kamila. Veja mais em github.com/kahpereira<br>Jardim Petrópolis, Ribeirão Pires - São Paulo</p>
-      <img src="/img/brafe.png" alt="Brafé">
+  <footer class="footer">
+    <div class="footer-container">
+      <p>Este é um projeto de Kamila. Veja mais em <a href="https://github.com/kahpereira" target="_blank">kamilapereira.git</a><br>Jardim Petrópolis, Ribeirão Pires - São Paulo</p>
+      <img src="./img/brafe.png" alt="Brafé">
     </div>
   </footer>
 </body>
